--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <section class="campus">
 
     <h1>Our Global Campus</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur,a adipisicing elit.</p>
     <div class="row">
       <div class="campus-col">
         <img src="../eduford_img/london.png">
